--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,11 @@
-.col {
-  max-height: 200px;
-  max-width: 200px;
-  height: 150px;
-  width: 200px;
-  margin: 5px;
-  background-color: #5d8aa8;
+h1 {
+  color: #5D8AA8;
+}
+
+h4 {
+  text-decoration: underline #5D8AA8;
+}
+
+header {
+  padding: 5px 0px;
 }
