--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,14 @@
-<div class="container-fluid text-center" >
-  <div class="row d-flex justify-content-center">
-    <div class="col">
-      <p>View personal Info</p>
-    </div>
-    <div class="col">
-      <p>All Team Members</p>
+<header>
+  <div class="container-fluid">
+    <div class="row text-center">
+      <h1>CMA</h1>
+      <h4>Competency Management App</h4>
     </div>
   </div>
-  <div class="row d-flex justify-content-center">
-    <div class="col">
-      <p>Team Statistics</p>
-    </div>
-    <div class="col">
-      <p>Add Team Member</p>
-    </div>
+</header>
+
+<main>
+  <div class="container-fluid text-center">
+    <router-outlet></router-outlet>
   </div>
-  <div class="row d-flex justify-content-center">
-    <div class="col">
-      <p>Bulk Upload</p>
-    </div>
-    <div class="col">
-      <p>Bulk Download</p>
-    </div>
-  </div>
-</div>
+</main>
