add footer menu buttons

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,32 +1,58 @@
 <body>
-  <div class="row d-flex justify-content-center">
-    <div class="col" routerLink="/personal-info">
-      <img class="img-fluid" src="./assets/images/personal-info.png" alt="View personal Info">
-      <p>View personal Info</p>
+  <div class="container-fluid text-center">
+    <div class="row d-flex justify-content-center">
+      <div class="col" routerLink="/personal-info">
+        <img
+          class="img-fluid"
+          src="./assets/images/personal-info.png"
+          alt="View personal Info"
+        />
+        <p>View personal Info</p>
+      </div>
+      <div class="col" routerLink="/team-memebrs">
+        <img
+          class="img-fluid"
+          src="./assets/images/team-info.png"
+          alt="All Team Members"
+        />
+        <p>All Team Members</p>
+      </div>
     </div>
-    <div class="col" routerLink="/team-memebrs">
-      <img class="img-fluid" src="./assets/images/team-info.png" alt="All Team Members">
-      <p>All Team Members</p>
+    <div class="row d-flex justify-content-center">
+      <div class="col" routerLink="/team-stats">
+        <img
+          class="img-fluid"
+          src="./assets/images/stats.png"
+          alt="Team Statistics"
+        />
+        <p>Team Statistics</p>
+      </div>
+      <div class="col" routerLink="/add">
+        <img
+          class="img-fluid"
+          src="./assets/images/add.png"
+          alt="Add Team Member"
+        />
+        <p>Add Team Member</p>
+      </div>
     </div>
-  </div>
-  <div class="row d-flex justify-content-center">
-    <div class="col" routerLink="/team-stats">
-      <img class="img-fluid" src="./assets/images/stats.png" alt="Team Statistics">
-      <p>Team Statistics</p>
-    </div>
-    <div class="col" routerLink="/add">
-      <img class="img-fluid" src="./assets/images/add.png" alt="Add Team Member">
-      <p>Add Team Member</p>
-    </div>
-  </div>
-  <div class="row d-flex justify-content-center">
-    <div class="col" routerLink="/upload">
-      <img class="img-fluid" src="./assets/images/upload.png" alt="Bulk Upload">
-      <p>Bulk Upload</p>
-    </div>
-    <div class="col" routerLink="/download">
-      <img class="img-fluid" src="./assets/images/download.png" alt="Bulk Download">
-      <p>Bulk Download</p>
+    <div class="row d-flex justify-content-center">
+      <div class="col" routerLink="/upload">
+        <img
+          class="img-fluid"
+          src="./assets/images/upload.png"
+          alt="Bulk Upload"
+        />
+        <p>Bulk Upload</p>
+      </div>
+      <div class="col" routerLink="/download">
+        <img
+          class="img-fluid"
+          src="./assets/images/download.png"
+          alt="Bulk Download"
+        />
+        <p>Bulk Download</p>
+      </div>
     </div>
   </div>
 </body>
