--- a/src/app/home/upload/upload.component.html
+++ b/src/app/home/upload/upload.component.html
@@ -1,18 +1,26 @@
 <body>
-  <p>Bulk Upload</p>
+  <div class="container-fluid justify-content-center">
+    <div class="row d-flex text-center">
+      <h2>Bulk Upload</h2>
+    </div>
+  </div>
 </body>
 <footer>
-  <div class="row d-flex justify-content-center">
-    <nav class="navbar fixed-bottom">
-      <div class="col">
+  <nav class="navbar fixed-bottom justify-content-center">
+    <div class="container-fluid justify-content-center">
+      <div class="row d-flex text-center">
+        <div class="col" style="background: white"></div>
+        <div class="col" style="background: white"></div>
+        <div class="col" style="background: white"></div>
+        <div class="col" routerLink="/">
+          <img
+            class="img-fluid"
+            src="./assets/images/back.png"
+            alt="Bulk Upload"
+          />
+          <p>Back</p>
+        </div>
       </div>
-      <div class="col">
-      </div>
-      <div class="col">
-      </div>
-      <div class="col" routerLink="/">
-        <p>Back</p>
-      </div>
-    </nav>
-  </div>
+    </div>
+  </nav>
 </footer>
