--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,6 @@ footer .navbar .col {
   margin: 5px;
 }
 
-img {
-    width: 70%;
-    padding: 10px;
+footer .navbar .col img {
+  padding: 5px;
 }
