--- a/src/app/home/personal-info/personal-info.component.html
+++ b/src/app/home/personal-info/personal-info.component.html
@@ -3,33 +3,46 @@
     <div class="row d-flex text-center">
       <h2>Personal Information</h2>
     </div>
+    <div class="row d-flex list-group-item overflow-auto">
+      <ul id="list" class="list-group list-group-flush">
+        <div *ngFor="let qualItem of userQualInfo; let i = index">
+          <li
+            class="list-group-item list-group-item-action"
+            #selected
+            (click)="
+              deleteimg.classList.toggle('d-none');
+              selected.classList.toggle('active')
+            "
+          >
+            <p>
+              <small>Qualification: </small>{{ qualItem.qual }} <br />
+              <small>Expiary: </small>{{ qualItem.exp }}
+            </p>
+            <img
+              #deleteimg
+              class="img-fluid d-none"
+              (click)="removeItem(i)"
+              src="./assets/images/delete.png"
+              alt="Bulk Upload"
+            />
+          </li>
+        </div>
+      </ul>
+    </div>
   </div>
 </body>
 <footer>
   <nav class="navbar fixed-bottom justify-content-center">
     <div class="container-fluid justify-content-center">
       <div class="row d-flex text-center">
-        <div class="col" style="background: white"></div>
-        <div class="col remove">
-          <img
-            class="img-fluid"
-            src="./assets/images/delete.png"
-            alt="Bulk Upload"
-          /><p>Delete</p>
-        </div>
-        <div class="col edit">
-          <img
-            class="img-fluid"
-            src="./assets/images/edit.png"
-            alt="Bulk Upload"
-          /><p>Edit</p>
+        <div class="col" style="opacity: 0"></div>
+        <div class="col" style="opacity: 0"></div>
+        <div class="col" (click)="addItem()">
+          <img class="img-fluid" src="./assets/images/edit.png" alt="Add" />
+          <p>Add</p>
         </div>
         <div class="col" routerLink="/">
-          <img
-            class="img-fluid"
-            src="./assets/images/back.png"
-            alt="Bulk Upload"
-          />
+          <img class="img-fluid" src="./assets/images/back.png" alt="Back" />
           <p>Back</p>
         </div>
       </div>
