--- a/src/app/home/team-info/qual-info/qual-info.component.html
+++ b/src/app/home/team-info/qual-info/qual-info.component.html
@@ -1,47 +1,30 @@
 <body>
   <div class="container-fluid justify-content-center">
     <div class="row d-flex text-center">
-      <h2>All Team Info</h2>
+      <h2>M. Trafford</h2>
     </div>
     <div class="row d-flex list-group-item overflow-auto">
       <ul id="list" class="list-group list-group-flush">
-        <div *ngFor="let teamMember of teamQualInfo; let i = index">
+        <div *ngFor="let qualItem of userQualInfo; let i = index">
           <li
             class="list-group-item list-group-item-action"
             #selected
             (click)="
               deleteimg.classList.toggle('d-none');
-              viewimg.classList.toggle('d-none');
               selected.classList.toggle('active')
             "
           >
-            <div class="row">
-              <div class="col-8"><small>Name: </small>{{ teamMember[0] }}</div>
-              <div class="col-4"><small>OOD: </small>{{ teamMember[1] }}</div>
-              <div class="row">
-                <div class="col-6">
-                  <img
-                    #deleteimg
-                    class="img-fluid d-none"
-                    style="float: right"
-                    (click)="removeItem(i)"
-                    src="./assets/images/delete.png"
-                    alt="Bulk Upload"
-                  />
-                </div>
-                <div class="col-6">
-                  <img
-                    #viewimg
-                    class="img-fluid d-none"
-                    style="float: left"
-                    routerLink="/qual-info"
-                    (click)="viewInfo(i)"
-                    src="./assets/images/edit.png"
-                    alt="View Info"
-                  />
-                </div>
-              </div>
-            </div>
+            <p>
+              <small>Qualification: </small>{{ qualItem.qual }} <br />
+              <small>Expiary: </small>{{ qualItem.exp }}
+            </p>
+            <img
+              #deleteimg
+              class="img-fluid d-none"
+              (click)="removeItem(i)"
+              src="./assets/images/delete.png"
+              alt="Bulk Upload"
+            />
           </li>
         </div>
       </ul>
