home page add team member function add

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,7 +27,7 @@
         />
         <p>Team Statistics</p>
       </div>
-      <div class="col" routerLink="/add">
+      <div class="col" routerLink="/qual-info" (click)="addNewTeamMem()">
         <img
           class="img-fluid"
           src="./assets/images/add.png"
