--- a/src/app/home/stats/stats.component.html
+++ b/src/app/home/stats/stats.component.html
@@ -3,21 +3,40 @@
     <div class="row d-flex text-center">
       <h2>Team Statistics</h2>
     </div>
+    <div class="container-fluid text-center">
+      <div class="row d-flex justify-content-center">
+        <div class="col">
+          <p class="totalNum">{{totalTeamMem}}</p>
+          <p>Amount in Team</p>
+        </div>
+        <div class="col">
+          <p class="totalNum">{{totalOod}}</p>
+          <p>Total OOD</p>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col">
+          <p class="totalNum">{{totalInDate}}</p>
+          <p>Total in Date</p>
+        </div>
+        <div class="col">
+          <p class="totalNum">{{totalOodThirtyDays}}</p>
+          <p>Total OOD in 30 Days</p>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
+
 <footer>
   <nav class="navbar fixed-bottom justify-content-center">
     <div class="container-fluid justify-content-center">
       <div class="row d-flex text-center">
-        <div class="col" style="background: white"></div>
-        <div class="col" style="background: white"></div>
-        <div class="col" style="background: white"></div>
+        <div class="col" style="opacity: 0"></div>
+        <div class="col" style="opacity: 0"></div>
+        <div class="col" style="opacity: 0"></div>
         <div class="col" routerLink="/">
-          <img
-            class="img-fluid"
-            src="./assets/images/back.png"
-            alt="Bulk Upload"
-          />
+          <img class="img-fluid" src="./assets/images/back.png" alt="Back" />
           <p>Back</p>
         </div>
       </div>
